fixed sliderr too small on small screen

--- a/blackjack/index.css
+++ b/blackjack/index.css
@@ -111,6 +111,6 @@ button {
             width: 33%;
         }
         #bet-slider{
-            width: 50%;
+            width: 67%;
         }
     }
